<resources>
    <string name="app_name">NotepadX</string>
    <string name="app_name_toolbar">Заметки</string>
    <string name="tools_title">Заголовок</string>
    <string name="tools_massage">Сообщение</string>
    <string name="tools_time">01.01.2021</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_info">Информация</string>
    <string name="menu_image">Изображение</string>
    <string name="details_btn_text">ОК</string>
    <string name="update_roon">"Изменения: "</string>
    <string name="btn_sheet_dialog_save">Сохранить</string>
    <string name="btn_sheet_dialog_update">Сохранить изменения</string>
    <string name="sheet_dialog_title">Заголовок</string>
    <string name="sheet_dialog_massage">Сообщение</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_update">Редактировать</string>
    <string name="menu_share">Поделится</string>
</resources>