<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin_8">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="@string/tools_title" />

    <TextView
        android:id="@+id/details_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
        tools:text="@string/tools_time" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_massage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:text="@string/tools_massage" />
    </androidx.core.widget.NestedScrollView>
</LinearLayout>