<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16">


        <LinearLayout
            android:id="@+id/card_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/tools_title" />

            <TextView
                android:id="@+id/card_massage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_massege"
                android:layout_marginTop="@dimen/margin_8"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="@string/tools_massage" />

            <TextView
                android:id="@+id/card_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                tools:text="@string/tools_time" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</FrameLayout>